# Simple_Tetris_clone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/SFML/lib/Debug/: sfml-main-d.lib  sfml-system-s-d.lib
libs/SFML/lib/Release/: sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-s.lib  sfml-window-s.lib
src/: Tetris.cpp  Tetris.hpp  main.cpp
