cmake_minimum_required(VERSION 3.10)

project(Tetris)

file(GLOB SRC_FILES
	src/*
)

add_subdirectory(external/SFML)

if(NOT TARGET sfml-graphics)
	message(FATAL_ERROR "sfml-graphics is required!")
elseif(NOT TARGET sfml-main)
	message(FATAL_ERROR "sfml-main is required!")
elseif(NOT TARGET sfml-system)
	message(FATAL_ERROR "sfml-system is required!")
elseif(NOT TARGET sfml-window)
	message(FATAL_ERROR "sfml-window is required!")
endif()

if(NOT BUILD_SHARED_LIBS)
	add_compile_definitions(SFML_STATIC)
endif()

if(SFML_USE_STATIC_STD_LIBS)
	#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
	#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
endif()

add_executable(${PROJECT_NAME} WIN32 ${SRC_FILES})

target_include_directories(${PROJECT_NAME} PRIVATE "external/SFML/include")

target_link_libraries(${PROJECT_NAME} "sfml-graphics;sfml-main;sfml-system;sfml-window")

set_target_properties( ${PROJECT_NAME}
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin"
)
